--- a/src/styles/uploader.module.css
+++ b/src/styles/uploader.module.css
@@ -1,4 +1,3 @@
-
 .box {
   min-width: 100%;
   min-height: 100%;
@@ -10,10 +9,10 @@
   flex-direction: column;
   background-color: #92c7cf80;
   margin-left: 33rem;
-  width: 800px;
-  min-height: 600px;
+  width: 900px;
+  min-height: 680px;
   height: auto;
-  padding: 10px;
+  padding: 5px;
   border-radius: 50px;
   margin-top: 3.5rem;
 }
@@ -76,6 +75,7 @@
   padding: 5px;
   display: flex;
   align-items: start;
+  max-width: 800px;
 }
 
 .files {
@@ -113,23 +113,19 @@
 
 /* DivTable.com */
 .divTable {
-  display: table;
-  width: 100%;
-  margin-top: 2px;
-}
-
-.divTableCell,
-.divTableHead {
-  display: table-cell;
-  padding: 3px 10px;
-  font-size: 16px;
-  font-weight: bold;
-  text-transform: capitalize;
+  max-width: 800px;
 }
 
 .listDiv {
-  display: flex;
-  align-items: flex-start;
+  display: inline;
   justify-content: flex-start;
-  width: 20rem;
+  align-items: flex-start;
+  max-width: 100%;
+}
+.divTableCell {
+  display: inline;
+  padding: 10px;
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: capitalize;
 }
